Implement styled header, hero, and static event showcase
Added Material Icons link, full HTML content for header, hero, and explore sections. Applied comprehensive CSS styling for a tech-forward look.

--- a/index.html
+++ b/index.html
@@ -36,10 +36,70 @@
             </div>
         </div>
     </section>
+
+    <section id="explore" class="section-padded">
+        <div class="container">
+            <h2>Explore Hyper-Local Events</h2>
+            <div class="filter-bar">
+                <input type="text" placeholder="Search events, venues..." class="search-input">
+                <select class="filter-select">
+                    <option value="">All Categories</option>
+                    <option value="music">Music & Live</option>
+                    <option value="food">Culinary & Drink</option>
+                    <option value="arts">Arts & Culture</option>
+                    <option value="outdoors">Outdoor Expeditions</option>
+                    <option value="professional">Professional Nexus</option>
+                </select>
+                <input type="date" class="filter-date">
+                <button class="btn btn-filter">Filter <span class="material-icons">filter_alt</span></button>
+            </div>
+            <div class="event-grid">
+                <div class="event-card">
+                    <img src="https://via.placeholder.com/400x250/00c0ff/ffffff?text=NWA+Tech+Meetup" alt="Event Image">
+                    <div class="card-content">
+                        <h3>NWA Tech Innovators Meetup</h3>
+                        <p class="event-date"><span class="material-icons">calendar_today</span> July 15, 2025</p>
+                        <p class="event-location"><span class="material-icons">location_on</span> The Collaborative, Bentonville</p>
+                        <p class="event-description">Connect with leading minds in AI, XR, and Web3. Network and share insights.</p>
+                        <a href="#" class="btn btn-link">View Details <span class="material-icons">chevron_right</span></a>
+                    </div>
+                </div>
+                <div class="event-card">
+                    <img src="https://via.placeholder.com/400x250/28a745/ffffff?text=Outdoor+Adventure" alt="Event Image">
+                    <div class="card-content">
+                        <h3>Ozark Trailblazers Hike</h3>
+                        <p class="event-date"><span class="material-icons">calendar_today</span> August 5, 2025</p>
+                        <p class="event-location"><span class="material-icons">location_on</span> Hobbs State Park</p>
+                        <p class="event-description">Explore scenic trails and earn XP for your outdoor achievements.</p>
+                        <a href="#" class="btn btn-link">View Details <span class="material-icons">chevron_right</span></a>
+                    </div>
+                </div>
+                <div class="event-card">
+                    <img src="https://via.placeholder.com/400x250/ffc107/333333?text=Culinary+Experience" alt="Event Image">
+                    <div class="card-content">
+                        <h3>Farm-to-Table Culinary Workshop</h3>
+                        <p class="event-date"><span class="material-icons">calendar_today</span> Every Saturday</p>
+                        <p class="event-location"><span class="material-icons">location_on</span> Local Harvest Kitchen, Fayetteville</p>
+                        <p class="event-description">Master new skills and unlock exclusive foodie badges.</p>
+                        <a href="#" class="btn btn-link">View Details <span class="material-icons">chevron_right</span></a>
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-load-more">Load More Events <span class="material-icons">expand_more</span></button>
+        </div>
+    </section>
 </main></main>
 
-    <footer>
-        </footer>
+    <footer><footer class="main-footer">
+    <div class="container">
+        <p>&copy; 2025 Local Lens (Pilot). All rights reserved.</p>
+        <div class="footer-links">
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms of Service</a>
+            <a href="#">Contact</a>
+        </div>
+    </div>
+</footer></footer>
 
     <script src="script.js"></script>    
 </body>
