Complete visual prototype: Add gamification, hunts, partners sections & JS
Inserted HTML for My Realm, Digital Scavenger Hunts, and Featured Venues. Applied all corresponding CSS styling. Added basic JavaScript for game mode toggle and smooth scrolling.

--- a/index.html
+++ b/index.html
@@ -87,10 +87,110 @@
             </div>
             <button class="btn btn-load-more">Load More Events <span class="material-icons">expand_more</span></button>
         </div>
+    </section><section id="my-realm" class="section-padded bg-dark">
+        <div class="container">
+            <h2>Your Local Lens Realm: Progress & Identity</h2>
+            <div class="realm-content">
+                <div class="avatar-section">
+                    <img src="https://via.placeholder.com/150/00c0ff/ffffff?text=My+Avatar" alt="User Avatar" class="avatar-img">
+                    <h3>Digital Nomad</h3>
+                    <div class="progress-bar">
+                        <div class="progress-fill" style="width: 75%;"></div>
+                        <span class="progress-text">Level 7 (75% to next)</span>
+                    </div>
+                    <p>Current XP: 1250 / 1500</p>
+                    <button class="btn btn-toggle-game-mode">Game Mode: ON <span class="material-icons">toggle_on</span></button>
+                </div>
+                <div class="achievements-section">
+                    <h3>Milestones Achieved</h3>
+                    <div class="badges-grid">
+                        <div class="badge">
+                            <img src="https://via.placeholder.com/80/007bff/ffffff?text=Explorer" alt="Badge">
+                            <p>NWA Explorer</p>
+                        </div>
+                        <div class="badge">
+                            <img src="https://via.placeholder.com/80/28a745/ffffff?text=Culture" alt="Badge">
+                            <p>Culture Catalyst</p>
+                        </div>
+                        <div class="badge">
+                            <img src="https://via.placeholder.com/80/ffc107/333333?text=Foodie" alt="Badge">
+                            <p>Gastronomy Guru</p>
+                        </div>
+                    </div>
+                    <a href="#" class="btn btn-link-light">View All Achievements <span class="material-icons">chevron_right</span></a>
+                </div>
+            </div>
+        </div>
+    </section><section id="hunts" class="section-padded">
+        <div class="container">
+            <h2>Digital Scavenger Hunts: Quests for Discovery</h2>
+            <p class="section-description">Embark on interactive quests, discover hidden gems, and earn exclusive rewards with our sponsored scavenger hunts.</p>
+            <div class="hunt-grid">
+                <div class="hunt-card">
+                    <img src="https://via.placeholder.com/400x250/dc3545/ffffff?text=Art+Hunt" alt="Hunt Image">
+                    <div class="card-content">
+                        <h3>Bentonville Art Circuit Challenge</h3>
+                        <p class="hunt-sponsor">Sponsored by: **Crystal Bridges Museum**</p>
+                        <p class="hunt-description">Solve clues, find public art installations, and unlock a special discount at the museum shop.</p>
+                        <a href="#" class="btn btn-accent">Join Quest <span class="material-icons">play_arrow</span></a>
+                    </div>
+                </div>
+                <div class="hunt-card">
+                    <img src="https://via.placeholder.com/400x250/17a2b8/ffffff?text=History+Hunt" alt="Hunt Image">
+                    <div class="card-content">
+                        <h3>Eureka Springs Historical Cipher</h3>
+                        <p class="hunt-sponsor">Sponsored by: **Eureka Springs Tourism Board**</p>
+                        <p class="hunt-description">Uncover historical secrets and earn unique avatar items tied to NWA heritage.</p>
+                        <a href="#" class="btn btn-accent">Join Quest <span class="material-icons">play_arrow</span></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section><section id="venues" class="section-padded bg-dark">
+        <div class="container">
+            <h2>Connect with Premier NWA Partners</h2>
+            <p class="section-description-light">Explore unique spaces and businesses that are part of the Local Lens network.</p>
+            <div class="venue-grid">
+                <div class="venue-card">
+                    <img src="https://via.placeholder.com/300x200/6c757d/ffffff?text=Venue+1" alt="Venue Image">
+                    <div class="card-content">
+                        <h3>The Momentary</h3>
+                        <p class="venue-location"><span class="material-icons">location_on</span> Bentonville, AR</p>
+                        <p class="venue-type">Contemporary Art, Performance</p>
+                        <a href="#" class="btn btn-link-light">View Profile <span class="material-icons">chevron_right</span></a>
+                    </div>
+                </div>
+                <div class="venue-card">
+                    <img src="https://via.placeholder.com/300x200/6c757d/ffffff?text=Venue+2" alt="Venue Image">
+                    <div class="card-content">
+                        <h3>Sassafras Springs Vineyard</h3>
+                        <p class="venue-location"><span class="material-icons">location_on</span> Springdale, AR</p>
+                        <p class="venue-type">Winery, Event Space, Retreat</p>
+                        <a href="#" class="btn btn-link-light">View Profile <span class="material-icons">chevron_right</span></a>
+                    </div>
+                </div>
+                <div class="venue-card">
+                    <img src="https://via.placeholder.com/300x200/6c757d/ffffff?text=Venue+3" alt="Venue Image">
+                    <div class="card-content">
+                        <h3>Botanical Garden of the Ozarks</h3>
+                        <p class="venue-location"><span class="material-icons">location_on</span> Fayetteville, AR</p>
+                        <p class="venue-type">Gardens, Outdoor Events, Education</p>
+                        <a href="#" class="btn btn-link-light">View Profile <span class="material-icons">chevron_right</span></a>
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="btn btn-primary">Partner With Local Lens <span class="material-icons">business_center</span></a>
+        </div>
     </section>
-</main></main>
+</main>
+<footer>
+</footer>
+<script src="script.js"></script>
+</body>
+        </html>
+    </main>
 
-    <footer><footer class="main-footer">
+    <footer class="main-footer">
     <div class="container">
         <p>&copy; 2025 Local Lens (Pilot). All rights reserved.</p>
         <div class="footer-links">
