--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 <body>
     <header><header class="main-header">
+    <header class="main-header">
     <div class="container">
         <div class="logo">Local Lens</div>
         <nav class="main-nav">
@@ -26,6 +27,7 @@
         </header>
 
     <main><main>
+    <main>
     <section class="hero-section">
         <div class="container">
             <h1>Unlock NWA. Level Up Your Reality.</h1>
@@ -51,112 +53,7 @@
                     <option value="professional">Professional Nexus</option>
                 </select>
                 <input type="date" class="filter-date">
-                <button class="btn btn-filter">Filter <span class="material-icons">filter_alt</span></button>
-            </div>
-            <div class="event-grid">
-                <div class="event-card">
-                    <img src="https://via.placeholder.com/400x250/00c0ff/ffffff?text=NWA+Tech+Meetup" alt="Event Image">
-                    <div class="card-content">
-                        <h3>NWA Tech Innovators Meetup</h3>
-                        <p class="event-date"><span class="material-icons">calendar_today</span> July 15, 2025</p>
-                        <p class="event-location"><span class="material-icons">location_on</span> The Collaborative, Bentonville</p>
-                        <p class="event-description">Connect with leading minds in AI, XR, and Web3. Network and share insights.</p>
-                        <a href="#" class="btn btn-link">View Details <span class="material-icons">chevron_right</span></a>
-                    </div>
-                </div>
-                <div class="event-card">
-                    <img src="https://via.placeholder.com/400x250/28a745/ffffff?text=Outdoor+Adventure" alt="Event Image">
-                    <div class="card-content">
-                        <h3>Ozark Trailblazers Hike</h3>
-                        <p class="event-date"><span class="material-icons">calendar_today</span> August 5, 2025</p>
-                        <p class="event-location"><span class="material-icons">location_on</span> Hobbs State Park</p>
-                        <p class="event-description">Explore scenic trails and earn XP for your outdoor achievements.</p>
-                        <a href="#" class="btn btn-link">View Details <span class="material-icons">chevron_right</span></a>
-                    </div>
-                </div>
-                <div class="event-card">
-                    <img src="https://via.placeholder.com/400x250/ffc107/333333?text=Culinary+Experience" alt="Event Image">
-                    <div class="card-content">
-                        <h3>Farm-to-Table Culinary Workshop</h3>
-                        <p class="event-date"><span class="material-icons">calendar_today</span> Every Saturday</p>
-                        <p class="event-location"><span class="material-icons">location_on</span> Local Harvest Kitchen, Fayetteville</p>
-                        <p class="event-description">Master new skills and unlock exclusive foodie badges.</p>
-                        <a href="#" class="btn btn-link">View Details <span class="material-icons">chevron_right</span></a>
-                    </div>
-                </div>
-            </div>
-            <button class="btn btn-load-more">Load More Events <span class="material-icons">expand_more</span></button>
-        </div>
-    </section><section id="my-realm" class="section-padded bg-dark">
-        <div class="container">
-            <h2>Your Local Lens Realm: Progress & Identity</h2>
-            <div class="realm-content">
-                <div class="avatar-section">
-                    <img src="https://via.placeholder.com/150/00c0ff/ffffff?text=My+Avatar" alt="User Avatar" class="avatar-img">
-                    <h3>Digital Nomad</h3>
-                    <div class="progress-bar">
-                        <div class="progress-fill" style="width: 75%;"></div>
-                        <span class="progress-text">Level 7 (75% to next)</span>
-                    </div>
-                    <p>Current XP: 1250 / 1500</p>
-                    <button class="btn btn-toggle-game-mode">Game Mode: ON <span class="material-icons">toggle_on</span></button>
-                </div>
-                <div class="achievements-section">
-                    <h3>Milestones Achieved</h3>
-                    <div class="badges-grid">
-                        <div class="badge">
-                            <img src="https://via.placeholder.com/80/007bff/ffffff?text=Explorer" alt="Badge">
-                            <p>NWA Explorer</p>
-                        </div>
-                        <div class="badge">
-                            <img src="https://via.placeholder.com/80/28a745/ffffff?text=Culture" alt="Badge">
-                            <p>Culture Catalyst</p>
-                        </div>
-                        <div class="badge">
-                            <img src="https://via.placeholder.com/80/ffc107/333333?text=Foodie" alt="Badge">
-                            <p>Gastronomy Guru</p>
-                        </div>
-                    </div>
-                    <a href="#" class="btn btn-link-light">View All Achievements <span class="material-icons">chevron_right</span></a>
-                </div>
-            </div>
-        </div>
-    </section><section id="hunts" class="section-padded">
-        <div class="container">
-            <h2>Digital Scavenger Hunts: Quests for Discovery</h2>
-            <p class="section-description">Embark on interactive quests, discover hidden gems, and earn exclusive rewards with our sponsored scavenger hunts.</p>
-            <div class="hunt-grid">
-                <div class="hunt-card">
-                    <img src="https://via.placeholder.com/400x250/dc3545/ffffff?text=Art+Hunt" alt="Hunt Image">
-                    <div class="card-content">
-                        <h3>Bentonville Art Circuit Challenge</h3>
-                        <p class="hunt-sponsor">Sponsored by: **Crystal Bridges Museum**</p>
-                        <p class="hunt-description">Solve clues, find public art installations, and unlock a special discount at the museum shop.</p>
-                        <a href="#" class="btn btn-accent">Join Quest <span class="material-icons">play_arrow</span></a>
-                    </div>
-                </div>
-                <div class="hunt-card">
-                    <img src="https://via.placeholder.com/400x250/17a2b8/ffffff?text=History+Hunt" alt="Hunt Image">
-                    <div class="card-content">
-                        <h3>Eureka Springs Historical Cipher</h3>
-                        <p class="hunt-sponsor">Sponsored by: **Eureka Springs Tourism Board**</p>
-                        <p class="hunt-description">Uncover historical secrets and earn unique avatar items tied to NWA heritage.</p>
-                        <a href="#" class="btn btn-accent">Join Quest <span class="material-icons">play_arrow</span></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section><section id="venues" class="section-padded bg-dark">
-        <div class="container">
-            <h2>Connect with Premier NWA Partners</h2>
-            <p class="section-description-light">Explore unique spaces and businesses that are part of the Local Lens network.</p>
-            <div class="venue-grid">
-                <div class="venue-card">
-                    <img src="https://via.placeholder.com/300x200/6c757d/ffffff?text=Venue+1" alt="Venue Image">
-                    <div class="card-content">
-                        <h3>The Momentary</h3>
-                        <p class="venue-location"><span class="material-icons">location_on</span> Bentonville, AR</p>
-                        <p class="venue-type">Contemporary Art, Performance</p>
+@@ -160,48 +157,41 @@
                         <a href="#" class="btn btn-link-light">View Profile <span class="material-icons">chevron_right</span></a>
                     </div>
                 </div>
@@ -200,8 +97,10 @@
         </div>
     </div>
 </footer></footer>
+</footer>
 
     <script src="script.js"></script>    
 </body>
 </body>
+</html>
 </html>
