--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-<body>
-    <header><header class="main-header">
     <header class="main-header">
     <div class="container">
         <div class="logo">Local Lens</div>
@@ -19,14 +17,12 @@
                 <li><a href="#my-realm">My Realm</a></li>
                 <li><a href="#hunts">Hunts</a></li>
                 <li><a href="#venues">Partners</a></li>
+                <li><a href="public/ar-test.html">AR Mode</a></li>
                 <li><a href="#" class="btn btn-primary">Sign In / Join</a></li>
             </ul>
         </nav>
     </div>
 </header>
-        </header>
-
-    <main><main>
     <main>
     <section class="hero-section">
         <div class="container">
@@ -47,60 +43,3 @@
                 <select class="filter-select">
                     <option value="">All Categories</option>
                     <option value="music">Music & Live</option>
-                    <option value="food">Culinary & Drink</option>
-                    <option value="arts">Arts & Culture</option>
-                    <option value="outdoors">Outdoor Expeditions</option>
-                    <option value="professional">Professional Nexus</option>
-                </select>
-                <input type="date" class="filter-date">
-@@ -160,48 +157,41 @@
-                        <a href="#" class="btn btn-link-light">View Profile <span class="material-icons">chevron_right</span></a>
-                    </div>
-                </div>
-                <div class="venue-card">
-                    <img src="https://via.placeholder.com/300x200/6c757d/ffffff?text=Venue+2" alt="Venue Image">
-                    <div class="card-content">
-                        <h3>Sassafras Springs Vineyard</h3>
-                        <p class="venue-location"><span class="material-icons">location_on</span> Springdale, AR</p>
-                        <p class="venue-type">Winery, Event Space, Retreat</p>
-                        <a href="#" class="btn btn-link-light">View Profile <span class="material-icons">chevron_right</span></a>
-                    </div>
-                </div>
-                <div class="venue-card">
-                    <img src="https://via.placeholder.com/300x200/6c757d/ffffff?text=Venue+3" alt="Venue Image">
-                    <div class="card-content">
-                        <h3>Botanical Garden of the Ozarks</h3>
-                        <p class="venue-location"><span class="material-icons">location_on</span> Fayetteville, AR</p>
-                        <p class="venue-type">Gardens, Outdoor Events, Education</p>
-                        <a href="#" class="btn btn-link-light">View Profile <span class="material-icons">chevron_right</span></a>
-                    </div>
-                </div>
-            </div>
-            <a href="#" class="btn btn-primary">Partner With Local Lens <span class="material-icons">business_center</span></a>
-        </div>
-    </section>
-</main>
-<footer>
-</footer>
-<script src="script.js"></script>
-</body>
-        </html>
-    </main>
-
-    <footer class="main-footer">
-    <div class="container">
-        <p>&copy; 2025 Local Lens (Pilot). All rights reserved.</p>
-        <div class="footer-links">
-            <a href="#">Privacy Policy</a>
-            <a href="#">Terms of Service</a>
-            <a href="#">Contact</a>
-        </div>
-    </div>
-</footer></footer>
-</footer>
-
-    <script src="script.js"></script>    
-</body>
-</body>
-</html>
-</html>
