--- a/index.html
+++ b/index.html
@@ -118,6 +118,15 @@
                         </div>
                         <a href="#" class="btn btn-link-light">View All Achievements <span class="material-icons">chevron_right</span></a>
                     </div>
+                    <section class="hero-section">
+                        <div class="container">
+                        <video class="hero-video" src="public/videos/overview.mp4"
+                           autoplay loop muted playsinline></video>
+                        <h1>Unlock NWA. Level Up Your Reality.</h1>
+                        <p>Discover hyper-local events, transform experiences into progress...</p>
+                            ...
+                    </div>
+        </section>
                 </div>
             </div>
         </section>
